<resources>
    <string name="app_name">MAD</string>
    <string name="tname1">JAYASUNDARA J.M.N.K.B</string>
    <string name="tname2">3 Months + muscle</string>
    <string name="tname3">SELECT YOUR PACKAGE</string>
    <string name="tname4">NUTRITION DETAILS</string>
    <string name="tname5">UPDATE YOUR ACCOUNT DETAILS</string>
    <string name="tname6">UPDATE</string>
    <string name="tname7">HEIGHT</string>
    <string name="tname8">REGISTRATION DETAILS</string>
    <string name="tname9">DELETE</string>
    <string name="tname10">GOLD package+ fatburn</string>
    <string name="tname11">FILL THE NUTRITION FORM</string>
    <string name="tname12">nipunakaushan@gmail.com</string>


    <string-array name="spinner">
        <item> Select Your Package</item>
        <item> 3 month</item>
        <item> 6 month</item>
        <item> Golden </item>

    </string-array>
    <string-array name="spinner1">
        <item> Select Your Gender</item>
        <item> Male</item>
        <item> Female</item>
        <item> Other </item>

    </string-array>

    <string name="select_a_month">Select a Month</string>
    <string-array name="A_Spinner_items" style="italic" textColor="#FFFFFF">
        <item>Select Month</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string name="select_a_year">Select a Year</string>
    <string-array name="A_Spinner_itemsA" style="italic">
        <item>Select Year</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
    </string-array>

    <string name="select_a_time">Select a Time Slot</string>
    <string-array name="A_Spinner_itemsB" style="italic">
        <item>Select Time-Slot</item>
        <item>8.30-9.30</item>
        <item>9.30-10.30</item>
        <item>10.30-11.30</item>
        <item>11.30-12.30</item>
        <item>12.30-13.30</item>
        <item>13.30-14.30</item>
        <item>14.30-15.30</item>
        <item>15.30-16.30</item>
        <item>16.30-17.30</item>
        <item>17.30-18.30</item>
        <item>18.30-19.30</item>
    </string-array>
</resources>


